# nucog

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.circleci/: config.yml  prepare.sh  run.sh
.github/workflows/: main.yml
cmake/: FindSphinx.cmake  add_parent_target.cmake  benchmark.cmake  download.CMakeLists.cmake.in  download.cmake  parse_revision.cmake  test.cmake
doc/: CMakeLists.txt  conf.py.in
include/nucog/: components.hpp  literal.hpp  nucog.hpp  symbol.hpp  traits.hpp
include/nucog/components/: as_expr.hpp  expr.hpp  literal.hpp  node.hpp  operators.hpp  symbols.hpp  tag.hpp  terminal.hpp
include/nucog/detail/: aggregate_bindings.hpp  fixed_string.hpp  helpers.hpp  raberu.hpp  supports_overload.hpp  type_map.hpp
include/nucog/expr/: as_expr.hpp  child.hpp  expr.hpp  is_expr.hpp  is_symbol.hpp  is_terminal.hpp  match.hpp  node.hpp  tag.hpp  terminal.hpp
include/nucog/ops/: abs.hpp  divides.hpp  function.hpp  make.hpp  minus.hpp  plus.hpp  times.hpp  unary_minus.hpp  unary_plus.hpp
include/nucog/traits/: default_evaluator.hpp  evaluate.hpp  is_expr.hpp  is_symbol.hpp  is_terminal.hpp  make.hpp  match.hpp  support_overload.hpp  supports_overload.hpp
include/nucog/visitor/: display.hpp  evaluate.hpp
test/: CMakeLists.txt  test.hpp
test/api/: CMakeLists.txt  display.cpp  evaluate.cpp  expr.cpp  literal.cpp  match.cpp  partial.cpp  renaming.cpp  terminal.cpp
test/formula/: CMakeLists.txt  partial.cpp  renaming.cpp
test/unit/: CMakeLists.txt
test/unit/api/: CMakeLists.txt  expr.cpp  literal.cpp  match.cpp  terminal.cpp
test/unit/formula/: CMakeLists.txt  partial.cpp  renaming.cpp
test/unit/visitor/: CMakeLists.txt  derivate.cpp  display.cpp  evaluate.cpp
test/visitor/: CMakeLists.txt  derivate.cpp  display.cpp  evaluate.cpp  vector.cpp
