##==================================================================================================
##  NuCoG - Numerical Code Generator
##  Copyright 2019-2021 Joel FALCOU
##  Copyright 2019-2021 Vincent REVERDY
##
##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
##  SPDX-License-Identifier: MIT
##==================================================================================================

add_subdirectory(unit)
